[gd_scene load_steps=12 format=2]

[ext_resource path="res://arts/culpits/generator.png" type="Texture" id=1]
[ext_resource path="res://objects/culpits/generator_culpit.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "build"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.329877, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 36.0035

[sub_resource type="CircleShape2D" id=13]
radius = 200.0

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.0496894, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.490196, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0 ), 0.0, 2.77321, 0, 0, Vector2( 1, 0.595455 ), -2.32727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.46
scale_curve = SubResource( 6 )
color = Color( 0.764706, 0.505882, 0.729412, 1 )
color_ramp = SubResource( 12 )

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/Circle.png-97076a15d3b51a30b532a5b6baa16132.stex"

[node name="Generator_Culpit" type="StaticBody2D" groups=["culpit"]]
collision_layer = 8
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
autoplay = "build"
anims/build = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="ControlPos" type="Position2D" parent="."]
position = Vector2( 0, 60 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.499998, 0.499999 )
scale = Vector2( 5.05, 5.05 )
process_parent = true
physics_process_parent = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 13 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 3
lifetime = 5.0
process_material = SubResource( 16 )
texture = SubResource( 17 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
